<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        style="@style/logo"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/background"
        android:paddingTop="25dp">

        <EditText
            android:id="@+id/regt_account_et"
            android:hint="@string/regt_account"
            android:digits="@string/id_format"
            style="@style/et_regt"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/regt_pwd_et"
            android:hint="@string/regt_pwd"
            style="@style/et_regt"
            android:inputType="textPassword"
            android:digits="@string/pwd_format"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/regt_conf_pwd"
            android:hint="@string/regt_pwd_conf"
            style="@style/et_regt"
            android:inputType="textPassword"
            android:digits="@string/pwd_format"
            android:layout_height="wrap_content"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:paddingTop="15dp"
            android:paddingBottom="15sp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:textSize="18sp"
                android:text="@string/user_info"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="4"/>

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"/>

            <TextView
                style="@style/tv_info"
                android:text="@string/user_name"
                android:layout_row="1"
                android:layout_column="1"/>
            <EditText
                android:id="@+id/name_et"
                android:layout_width="120dp"
                style="@style/et_info"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_columnSpan="2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_age"
                android:layout_row="2"
                android:layout_column="1"/>
            <Spinner
                android:id="@+id/age_spin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/age"
                android:layout_row="2"
                android:layout_column="2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_sex"
                android:layout_row="3"
                android:layout_column="1"/>
            <Spinner
                android:id="@+id/sex_spin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/sex"
                android:layout_row="3"
                android:layout_column="2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_tel"
                android:layout_row="4"
                android:layout_column="1"/>
            <EditText
                android:id="@+id/tel_et"
                android:layout_width="200dp"
                style="@style/et_info"
                android:inputType="phone"
                android:layout_row="4"
                android:layout_column="2"
                android:layout_columnSpan="3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_class"
                android:layout_row="5"
                android:layout_column="1"/>
            <EditText
                android:id="@+id/class_name_et"
                android:layout_width="200dp"
                style="@style/et_info"
                android:layout_row="5"
                android:layout_column="2"
                android:layout_columnSpan="3"/>

            <Button
                android:id="@+id/regt_btn"
                android:text="@string/regt_btn"
                style="@style/btn_regt"
                android:layout_row="6"
                android:layout_column="2"/>
            <Button
                android:id="@+id/cancel_btn"
                android:text="@string/cancel_btn"
                style="@style/btn_regt"
                android:layout_row="6"
                android:layout_column="3"/>


        </GridLayout>

    </LinearLayout>

</LinearLayout>